--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build",
-        "buildprod": "ng build --prod --extra-webpack-config webpack.externals.js",
+        "build": "ng build --prod",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
@@ -30,7 +29,6 @@
         "@scullyio/scully": "^1.0.0",
         "devicon": "^2.2.0",
         "moment": "^2.29.1",
-        "ngx-build-plus": "^11.0.0",
         "rxjs": "~6.6.3",
         "tslib": "^2.1.0",
         "zone.js": "~0.11.3"
@@ -57,7 +55,8 @@
         "protractor": "~7.0.0",
         "ts-node": "~9.1.1",
         "tslint": "^6.1.3",
-        "typescript": "~4.0.2"
+        "typescript": "~4.0.2",
+        "webpack-dev-server": "^3.11.1"
     },
     "husky": {
         "hooks": {
