--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "@scullyio/ng-lib": "^1.0.0",
         "@scullyio/scully": "^1.0.0",
         "devicon": "^2.2.0",
-        "moment": "^2.29.1",
+        "luxon": "^1.25.0",
         "rxjs": "~6.6.3",
         "tslib": "^2.1.0",
         "zone.js": "~0.11.3"
@@ -56,7 +56,8 @@
         "ts-node": "~9.1.1",
         "tslint": "^6.1.3",
         "typescript": "~4.0.2",
-        "webpack-dev-server": "^3.11.1"
+        "webpack-dev-server": "^3.11.1",
+        "@types/luxon": "^1.25.0"
     },
     "husky": {
         "hooks": {
