--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.app.json",
                         "aot": true,
-                        "assets": ["src/icon.ico", "src/assets"],
+                        "assets": ["src/favicon.ico", "src/assets"],
                         "styles": [
                             "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
                             "./node_modules/devicon/devicon.min.css",
@@ -86,7 +86,7 @@
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.spec.json",
                         "karmaConfig": "karma.conf.js",
-                        "assets": ["src/icon.ico", "src/assets"],
+                        "assets": ["src/favicon.ico", "src/assets"],
                         "styles": ["src/styles.scss"],
                         "scripts": []
                     }
